@startuml

title __MICROCONTROLLER's Class Diagram__\n

  namespace microcontroller {
    class microcontroller.ATMega32 {
        + create()
        + createController()
        + createDisplay()
        + createIdentification()
        + createStorage()
        + setWeightMeasurement()
        + toString()
    }
  }
  

  namespace microcontroller {
    class microcontroller.ArduinoMega {
        + create()
        + createController()
        + createDisplay()
        + createIdentification()
        + createStorage()
        + setWeightMeasurement()
        + toString()
    }
  }
  

  namespace microcontroller {
    abstract class microcontroller.Microncontroller {
        {abstract} + create()
        {abstract} + createController()
        {abstract} + createDisplay()
        {abstract} + createIdentification()
        {abstract} + createStorage()
        + createWeightMeasurement()
        {abstract} + setWeightMeasurement()
        {abstract} + toString()
    }
  }
  

  namespace microcontroller {
    class microcontroller.RaspberryPi {
        + create()
        + createController()
        + createDisplay()
        + createIdentification()
        + createStorage()
        + setWeightMeasurement()
        + toString()
    }
  }
  

  microcontroller.ATMega32 -up-|> microcontroller.Microncontroller
  microcontroller.ATMega32 o-- component.hardware.controller.Controller : controller
  microcontroller.ATMega32 o-- component.hardware.display.Display : display
  microcontroller.ATMega32 o-- component.hardware.identification.Identfication : identfication
  microcontroller.ATMega32 o-- component.hardware.storage.Storage : storage
  microcontroller.ATMega32 o-- component.hardware.weightmeasurement.WeightMeasurement : weightMeasurement
  microcontroller.ArduinoMega -up-|> microcontroller.Microncontroller
  microcontroller.ArduinoMega o-- component.hardware.controller.Controller : controller
  microcontroller.ArduinoMega o-- component.hardware.display.Display : display
  microcontroller.ArduinoMega o-- component.hardware.identification.Identfication : identfication
  microcontroller.ArduinoMega o-- component.hardware.storage.Storage : storage
  microcontroller.ArduinoMega o-- component.hardware.weightmeasurement.WeightMeasurement : weightMeasurement
  microcontroller.RaspberryPi -up-|> microcontroller.Microncontroller
  microcontroller.RaspberryPi o-- component.hardware.controller.Controller : controller
  microcontroller.RaspberryPi o-- component.hardware.display.Display : display
  microcontroller.RaspberryPi o-- component.hardware.identification.Identfication : identfication
  microcontroller.RaspberryPi o-- component.hardware.storage.Storage : storage
  microcontroller.RaspberryPi o-- component.hardware.weightmeasurement.WeightMeasurement : weightMeasurement


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
